src/pt_gfx_mesh_base_gltf_yacc.output
Terminals unused in grammar

    PSEUDO_LEX_ERROR


Grammar

    0 $accept: gltf_object $end

    1 gltf_object: YYTOKEN_LEFTBRACE gltf_members YYTOKEN_RIGHTBRACE

    2 gltf_members: gltf_members YYTOKEN_COMMA gltf_member
    3             | gltf_member

    4 gltf_member: YYTOKEN_ASSET YYTOKEN_COLON asset_object
    5            | YYTOKEN_SCENE YYTOKEN_COLON YYTOKEN_NUMBER_INT
    6            | YYTOKEN_SCENES YYTOKEN_COLON scenes_array
    7            | YYTOKEN_NODES YYTOKEN_COLON nodes_array

    8 asset_object: YYTOKEN_LEFTBRACE asset_members YYTOKEN_RIGHTBRACE

    9 asset_members: asset_members YYTOKEN_COMMA asset_member
   10              | asset_member

   11 asset_member: YYTOKEN_COPYRIGHT YYTOKEN_COLON json_string
   12             | YYTOKEN_GENERATOR YYTOKEN_COLON json_string
   13             | YYTOKEN_VERSION YYTOKEN_COLON json_string
   14             | YYTOKEN_MINVERSION YYTOKEN_COLON json_string
   15             | YYTOKEN_EXTRAS YYTOKEN_COLON json_value

   16 scenes_array: YYTOKEN_LEFTBRACKET scene_objects YYTOKEN_RIGHTBRACKET
   17             | YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

   18 scene_objects: scene_objects YYTOKEN_COMMA scene_object
   19              | scene_object

   20 scene_object: YYTOKEN_LEFTBRACE scene_properties YYTOKEN_RIGHTBRACE
   21             | YYTOKEN_LEFTBRACE YYTOKEN_RIGHTBRACE

   22 scene_properties: scene_properties YYTOKEN_COMMA YYTOKEN_NODES YYTOKEN_COLON scene_property_nodes
   23                 | scene_properties YYTOKEN_COMMA YYTOKEN_NAME YYTOKEN_COLON json_string
   24                 | scene_properties YYTOKEN_COMMA YYTOKEN_EXTRAS YYTOKEN_COLON json_value
   25                 | YYTOKEN_NODES YYTOKEN_COLON scene_property_nodes
   26                 | YYTOKEN_NAME YYTOKEN_COLON json_string
   27                 | YYTOKEN_EXTRAS YYTOKEN_COLON json_value

   28 scene_property_nodes: YYTOKEN_LEFTBRACKET scene_property_nodes_elements YYTOKEN_RIGHTBRACKET
   29                     | YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

   30 scene_property_nodes_elements: scene_property_nodes_elements YYTOKEN_COMMA YYTOKEN_NUMBER_INT
   31                              | YYTOKEN_NUMBER_INT

   32 nodes_array: YYTOKEN_LEFTBRACKET node_objects YYTOKEN_RIGHTBRACKET
   33            | YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

   34 node_objects: node_objects YYTOKEN_COMMA node_object
   35             | node_object

   36 node_object: YYTOKEN_LEFTBRACE node_properties YYTOKEN_RIGHTBRACE
   37            | YYTOKEN_LEFTBRACE YYTOKEN_RIGHTBRACE

   38 node_properties: node_properties YYTOKEN_COMMA YYTOKEN_CAMERA YYTOKEN_COLON YYTOKEN_NUMBER_INT
   39                | node_properties YYTOKEN_COMMA YYTOKEN_CHILDREN YYTOKEN_COLON node_property_children
   40                | node_properties YYTOKEN_COMMA YYTOKEN_SKIN YYTOKEN_COLON YYTOKEN_NUMBER_INT
   41                | node_properties YYTOKEN_COMMA YYTOKEN_MATRIX YYTOKEN_COLON node_property_matrix
   42                | node_properties YYTOKEN_COMMA YYTOKEN_MESH YYTOKEN_COLON YYTOKEN_NUMBER_INT
   43                | node_properties YYTOKEN_COMMA YYTOKEN_ROTATION YYTOKEN_COLON node_property_rotation
   44                | node_properties YYTOKEN_COMMA YYTOKEN_SCALE YYTOKEN_COLON node_property_scale
   45                | node_properties YYTOKEN_COMMA YYTOKEN_TRANSLATION YYTOKEN_COLON node_property_translation
   46                | node_properties YYTOKEN_COMMA YYTOKEN_WEIGHTS YYTOKEN_COLON node_property_weights
   47                | node_properties YYTOKEN_COMMA YYTOKEN_NAME YYTOKEN_COLON json_string
   48                | YYTOKEN_CAMERA YYTOKEN_COLON YYTOKEN_NUMBER_INT
   49                | YYTOKEN_CHILDREN YYTOKEN_COLON node_property_children
   50                | YYTOKEN_SKIN YYTOKEN_COLON YYTOKEN_NUMBER_INT
   51                | YYTOKEN_MATRIX YYTOKEN_COLON node_property_matrix
   52                | YYTOKEN_MESH YYTOKEN_COLON YYTOKEN_NUMBER_INT
   53                | YYTOKEN_ROTATION YYTOKEN_COLON node_property_rotation
   54                | YYTOKEN_SCALE YYTOKEN_COLON node_property_scale
   55                | YYTOKEN_TRANSLATION YYTOKEN_COLON node_property_translation
   56                | YYTOKEN_WEIGHTS YYTOKEN_COLON node_property_weights
   57                | YYTOKEN_NAME YYTOKEN_COLON json_string

   58 node_property_children: YYTOKEN_LEFTBRACKET node_property_children_elements YYTOKEN_RIGHTBRACKET
   59                       | YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

   60 node_property_children_elements: node_property_children_elements YYTOKEN_COMMA YYTOKEN_NUMBER_INT
   61                                | YYTOKEN_NUMBER_INT

   62 node_property_matrix: YYTOKEN_LEFTBRACKET node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_COMMA node_property_matrix_element YYTOKEN_RIGHTBRACKET

   63 node_property_matrix_element: YYTOKEN_NUMBER_FLOAT
   64                             | YYTOKEN_NUMBER_INT

   65 node_property_rotation: YYTOKEN_LEFTBRACKET node_property_rotation_element YYTOKEN_COMMA node_property_rotation_element YYTOKEN_COMMA node_property_rotation_element YYTOKEN_COMMA node_property_rotation_element YYTOKEN_RIGHTBRACKET

   66 node_property_rotation_element: YYTOKEN_NUMBER_FLOAT
   67                               | YYTOKEN_NUMBER_INT

   68 node_property_scale: YYTOKEN_LEFTBRACKET node_property_scale_element YYTOKEN_COMMA node_property_scale_element YYTOKEN_COMMA node_property_scale_element YYTOKEN_RIGHTBRACKET

   69 node_property_scale_element: YYTOKEN_NUMBER_FLOAT
   70                            | YYTOKEN_NUMBER_INT

   71 node_property_translation: YYTOKEN_LEFTBRACKET node_property_translation_element YYTOKEN_COMMA node_property_translation_element YYTOKEN_COMMA node_property_translation_element YYTOKEN_RIGHTBRACKET

   72 node_property_translation_element: YYTOKEN_NUMBER_FLOAT
   73                                  | YYTOKEN_NUMBER_INT

   74 node_property_weights: YYTOKEN_LEFTBRACKET node_property_weights_elements YYTOKEN_RIGHTBRACKET
   75                      | YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

   76 node_property_weights_elements: node_property_weights_elements YYTOKEN_COMMA YYTOKEN_NUMBER_INT
   77                               | YYTOKEN_NUMBER_INT

   78 json_string: YYTOKEN_STRING
   79            | YYTOKEN_ASSET
   80            | YYTOKEN_COPYRIGHT
   81            | YYTOKEN_GENERATOR
   82            | YYTOKEN_VERSION
   83            | YYTOKEN_MINVERSION
   84            | YYTOKEN_EXTENSIONS
   85            | YYTOKEN_EXTRAS
   86            | YYTOKEN_SCENES
   87            | YYTOKEN_NODES
   88            | YYTOKEN_NAME

   89 json_value: json_object
   90           | json_array
   91           | json_string
   92           | YYTOKEN_NUMBER_INT
   93           | YYTOKEN_NUMBER_FLOAT
   94           | YYTOKEN_TRUE
   95           | YYTOKEN_FALSE
   96           | YYTOKEN_NULL

   97 json_object: YYTOKEN_LEFTBRACE json_members YYTOKEN_RIGHTBRACE
   98            | YYTOKEN_LEFTBRACE YYTOKEN_RIGHTBRACE

   99 json_members: json_members YYTOKEN_COMMA json_member
  100             | json_member

  101 json_member: YYTOKEN_STRING YYTOKEN_COLON json_value

  102 json_array: YYTOKEN_LEFTBRACKET json_elements YYTOKEN_RIGHTBRACKET
  103           | YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

  104 json_elements: json_elements YYTOKEN_COMMA json_element
  105              | json_element

  106 json_element: json_value


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    YYTOKEN_ASSET (258) 4 79
    YYTOKEN_COPYRIGHT (259) 11 80
    YYTOKEN_GENERATOR (260) 12 81
    YYTOKEN_VERSION (261) 13 82
    YYTOKEN_MINVERSION (262) 14 83
    YYTOKEN_EXTENSIONS (263) 84
    YYTOKEN_EXTRAS (264) 15 24 27 85
    YYTOKEN_SCENE (265) 5
    YYTOKEN_SCENES (266) 6 86
    YYTOKEN_NODES (267) 7 22 25 87
    YYTOKEN_NAME (268) 23 26 47 57 88
    YYTOKEN_CAMERA (269) 38 48
    YYTOKEN_CHILDREN (270) 39 49
    YYTOKEN_SKIN (271) 40 50
    YYTOKEN_MATRIX (272) 41 51
    YYTOKEN_MESH (273) 42 52
    YYTOKEN_ROTATION (274) 43 53
    YYTOKEN_SCALE (275) 44 54
    YYTOKEN_TRANSLATION (276) 45 55
    YYTOKEN_WEIGHTS (277) 46 56
    YYTOKEN_TRUE (278) 94
    YYTOKEN_FALSE (279) 95
    YYTOKEN_NULL (280) 96
    YYTOKEN_LEFTBRACE (281) 1 8 20 21 36 37 97 98
    YYTOKEN_RIGHTBRACE (282) 1 8 20 21 36 37 97 98
    YYTOKEN_COLON (283) 4 5 6 7 11 12 13 14 15 22 23 24 25 26 27 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 101
    YYTOKEN_LEFTBRACKET (284) 16 17 28 29 32 33 58 59 62 65 68 71 74 75 102 103
    YYTOKEN_RIGHTBRACKET (285) 16 17 28 29 32 33 58 59 62 65 68 71 74 75 102 103
    YYTOKEN_COMMA (286) 2 9 18 22 23 24 30 34 38 39 40 41 42 43 44 45 46 47 60 62 65 68 71 76 99 104
    YYTOKEN_STRING <m_token_string> (287) 78 101
    YYTOKEN_NUMBER_INT <m_token_numberint> (288) 5 30 31 38 40 42 48 50 52 60 61 64 67 70 73 76 77 92
    YYTOKEN_NUMBER_FLOAT <m_token_numberfloat> (289) 63 66 69 72 93
    PSEUDO_LEX_ERROR (290)


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    gltf_object (37)
        on left: 1
        on right: 0
    gltf_members (38)
        on left: 2 3
        on right: 1 2
    gltf_member (39)
        on left: 4 5 6 7
        on right: 2 3
    asset_object (40)
        on left: 8
        on right: 4
    asset_members (41)
        on left: 9 10
        on right: 8 9
    asset_member (42)
        on left: 11 12 13 14 15
        on right: 9 10
    scenes_array (43)
        on left: 16 17
        on right: 6
    scene_objects (44)
        on left: 18 19
        on right: 16 18
    scene_object <m_scene_index> (45)
        on left: 20 21
        on right: 18 19
    scene_properties <m_scene_index> (46)
        on left: 22 23 24 25 26 27
        on right: 20 22 23 24
    scene_property_nodes <m_int_array> (47)
        on left: 28 29
        on right: 22 25
    scene_property_nodes_elements <m_int_array> (48)
        on left: 30 31
        on right: 28 30
    nodes_array (49)
        on left: 32 33
        on right: 7
    node_objects (50)
        on left: 34 35
        on right: 32 34
    node_object <m_node_index> (51)
        on left: 36 37
        on right: 34 35
    node_properties <m_node_index> (52)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 36 38 39 40 41 42 43 44 45 46 47
    node_property_children <m_int_array> (53)
        on left: 58 59
        on right: 39 49
    node_property_children_elements <m_int_array> (54)
        on left: 60 61
        on right: 58 60
    node_property_matrix <m_mat4x4> (55)
        on left: 62
        on right: 41 51
    node_property_matrix_element <m_token_numberfloat> (56)
        on left: 63 64
        on right: 62
    node_property_rotation <m_vec4> (57)
        on left: 65
        on right: 43 53
    node_property_rotation_element <m_token_numberfloat> (58)
        on left: 66 67
        on right: 65
    node_property_scale <m_vec3> (59)
        on left: 68
        on right: 44 54
    node_property_scale_element <m_token_numberfloat> (60)
        on left: 69 70
        on right: 68
    node_property_translation <m_vec3> (61)
        on left: 71
        on right: 45 55
    node_property_translation_element <m_token_numberfloat> (62)
        on left: 72 73
        on right: 71
    node_property_weights <m_float_array> (63)
        on left: 74 75
        on right: 46 56
    node_property_weights_elements <m_float_array> (64)
        on left: 76 77
        on right: 74 76
    json_string <m_token_string> (65)
        on left: 78 79 80 81 82 83 84 85 86 87 88
        on right: 11 12 13 14 23 26 47 57 91
    json_value (66)
        on left: 89 90 91 92 93 94 95 96
        on right: 15 24 27 101 106
    json_object (67)
        on left: 97 98
        on right: 89
    json_members (68)
        on left: 99 100
        on right: 97 99
    json_member (69)
        on left: 101
        on right: 99 100
    json_array (70)
        on left: 102 103
        on right: 90
    json_elements (71)
        on left: 104 105
        on right: 102 104
    json_element (72)
        on left: 106
        on right: 104 105


State 0

    0 $accept: • gltf_object $end
    1 gltf_object: • YYTOKEN_LEFTBRACE gltf_members YYTOKEN_RIGHTBRACE

    YYTOKEN_LEFTBRACE  shift, and go to state 1

    gltf_object  go to state 2


State 1

    1 gltf_object: YYTOKEN_LEFTBRACE • gltf_members YYTOKEN_RIGHTBRACE
    2 gltf_members: • gltf_members YYTOKEN_COMMA gltf_member
    3             | • gltf_member
    4 gltf_member: • YYTOKEN_ASSET YYTOKEN_COLON asset_object
    5            | • YYTOKEN_SCENE YYTOKEN_COLON YYTOKEN_NUMBER_INT
    6            | • YYTOKEN_SCENES YYTOKEN_COLON scenes_array
    7            | • YYTOKEN_NODES YYTOKEN_COLON nodes_array

    YYTOKEN_ASSET   shift, and go to state 3
    YYTOKEN_SCENE   shift, and go to state 4
    YYTOKEN_SCENES  shift, and go to state 5
    YYTOKEN_NODES   shift, and go to state 6

    gltf_members  go to state 7
    gltf_member   go to state 8


State 2

    0 $accept: gltf_object • $end

    $end  shift, and go to state 9


State 3

    4 gltf_member: YYTOKEN_ASSET • YYTOKEN_COLON asset_object

    YYTOKEN_COLON  shift, and go to state 10


State 4

    5 gltf_member: YYTOKEN_SCENE • YYTOKEN_COLON YYTOKEN_NUMBER_INT

    YYTOKEN_COLON  shift, and go to state 11


State 5

    6 gltf_member: YYTOKEN_SCENES • YYTOKEN_COLON scenes_array

    YYTOKEN_COLON  shift, and go to state 12


State 6

    7 gltf_member: YYTOKEN_NODES • YYTOKEN_COLON nodes_array

    YYTOKEN_COLON  shift, and go to state 13


State 7

    1 gltf_object: YYTOKEN_LEFTBRACE gltf_members • YYTOKEN_RIGHTBRACE
    2 gltf_members: gltf_members • YYTOKEN_COMMA gltf_member

    YYTOKEN_RIGHTBRACE  shift, and go to state 14
    YYTOKEN_COMMA       shift, and go to state 15


State 8

    3 gltf_members: gltf_member •

    $default  reduce using rule 3 (gltf_members)


State 9

    0 $accept: gltf_object $end •

    $default  accept


State 10

    4 gltf_member: YYTOKEN_ASSET YYTOKEN_COLON • asset_object
    8 asset_object: • YYTOKEN_LEFTBRACE asset_members YYTOKEN_RIGHTBRACE

    YYTOKEN_LEFTBRACE  shift, and go to state 16

    asset_object  go to state 17


State 11

    5 gltf_member: YYTOKEN_SCENE YYTOKEN_COLON • YYTOKEN_NUMBER_INT

    YYTOKEN_NUMBER_INT  shift, and go to state 18


State 12

    6 gltf_member: YYTOKEN_SCENES YYTOKEN_COLON • scenes_array
   16 scenes_array: • YYTOKEN_LEFTBRACKET scene_objects YYTOKEN_RIGHTBRACKET
   17             | • YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

    YYTOKEN_LEFTBRACKET  shift, and go to state 19

    scenes_array  go to state 20


State 13

    7 gltf_member: YYTOKEN_NODES YYTOKEN_COLON • nodes_array
   32 nodes_array: • YYTOKEN_LEFTBRACKET node_objects YYTOKEN_RIGHTBRACKET
   33            | • YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET

    YYTOKEN_LEFTBRACKET  shift, and go to state 21

    nodes_array  go to state 22


State 14

    1 gltf_object: YYTOKEN_LEFTBRACE gltf_members YYTOKEN_RIGHTBRACE •

    $default  reduce using rule 1 (gltf_object)


State 15

    2 gltf_members: gltf_members YYTOKEN_COMMA • gltf_member
    4 gltf_member: • YYTOKEN_ASSET YYTOKEN_COLON asset_object
    5            | • YYTOKEN_SCENE YYTOKEN_COLON YYTOKEN_NUMBER_INT
    6            | • YYTOKEN_SCENES YYTOKEN_COLON scenes_array
    7            | • YYTOKEN_NODES YYTOKEN_COLON nodes_array

    YYTOKEN_ASSET   shift, and go to state 3
    YYTOKEN_SCENE   shift, and go to state 4
    YYTOKEN_SCENES  shift, and go to state 5
    YYTOKEN_NODES   shift, and go to state 6

    gltf_member  go to state 23


State 16

    8 asset_object: YYTOKEN_LEFTBRACE • asset_members YYTOKEN_RIGHTBRACE
    9 asset_members: • asset_members YYTOKEN_COMMA asset_member
   10              | • asset_member
   11 asset_member: • YYTOKEN_COPYRIGHT YYTOKEN_COLON json_string
   12             | • YYTOKEN_GENERATOR YYTOKEN_COLON json_string
   13             | • YYTOKEN_VERSION YYTOKEN_COLON json_string
   14             | • YYTOKEN_MINVERSION YYTOKEN_COLON json_string
   15             | • YYTOKEN_EXTRAS YYTOKEN_COLON json_value

    YYTOKEN_COPYRIGHT   shift, and go to state 24
    YYTOKEN_GENERATOR   shift, and go to state 25
    YYTOKEN_VERSION     shift, and go to state 26
    YYTOKEN_MINVERSION  shift, and go to state 27
    YYTOKEN_EXTRAS      shift, and go to state 28

    asset_members  go to state 29
    asset_member   go to state 30


State 17

    4 gltf_member: YYTOKEN_ASSET YYTOKEN_COLON asset_object •

    $default  reduce using rule 4 (gltf_member)


State 18

    5 gltf_member: YYTOKEN_SCENE YYTOKEN_COLON YYTOKEN_NUMBER_INT •

    $default  reduce using rule 5 (gltf_member)


State 19

   16 scenes_array: YYTOKEN_LEFTBRACKET • scene_objects YYTOKEN_RIGHTBRACKET
   17             | YYTOKEN_LEFTBRACKET • YYTOKEN_RIGHTBRACKET
   18 scene_objects: • scene_objects YYTOKEN_COMMA scene_object
   19              | • scene_object
   20 scene_object: • YYTOKEN_LEFTBRACE scene_properties YYTOKEN_RIGHTBRACE
   21             | • YYTOKEN_LEFTBRACE YYTOKEN_RIGHTBRACE

    YYTOKEN_LEFTBRACE     shift, and go to state 31
    YYTOKEN_RIGHTBRACKET  shift, and go to state 32

    scene_objects  go to state 33
    scene_object   go to state 34


State 20

    6 gltf_member: YYTOKEN_SCENES YYTOKEN_COLON scenes_array •

    $default  reduce using rule 6 (gltf_member)


State 21

   32 nodes_array: YYTOKEN_LEFTBRACKET • node_objects YYTOKEN_RIGHTBRACKET
   33            | YYTOKEN_LEFTBRACKET • YYTOKEN_RIGHTBRACKET
   34 node_objects: • node_objects YYTOKEN_COMMA node_object
   35             | • node_object
   36 node_object: • YYTOKEN_LEFTBRACE node_properties YYTOKEN_RIGHTBRACE
   37            | • YYTOKEN_LEFTBRACE YYTOKEN_RIGHTBRACE

    YYTOKEN_LEFTBRACE     shift, and go to state 35
    YYTOKEN_RIGHTBRACKET  shift, and go to state 36

    node_objects  go to state 37
    node_object   go to state 38


State 22

    7 gltf_member: YYTOKEN_NODES YYTOKEN_COLON nodes_array •

    $default  reduce using rule 7 (gltf_member)


State 23

    2 gltf_members: gltf_members YYTOKEN_COMMA gltf_member •

    $default  reduce using rule 2 (gltf_members)


State 24

   11 asset_member: YYTOKEN_COPYRIGHT • YYTOKEN_COLON json_string

    YYTOKEN_COLON  shift, and go to state 39


State 25

   12 asset_member: YYTOKEN_GENERATOR • YYTOKEN_COLON json_string

    YYTOKEN_COLON  shift, and go to state 40


State 26

   13 asset_member: YYTOKEN_VERSION • YYTOKEN_COLON json_string

    YYTOKEN_COLON  shift, and go to state 41


State 27

   14 asset_member: YYTOKEN_MINVERSION • YYTOKEN_COLON json_string

    YYTOKEN_COLON  shift, and go to state 42


State 28

   15 asset_member: YYTOKEN_EXTRAS • YYTOKEN_COLON json_value

    YYTOKEN_COLON  shift, and go to state 43


State 29

    8 asset_object: YYTOKEN_LEFTBRACE asset_members • YYTOKEN_RIGHTBRACE
    9 asset_members: asset_members • YYTOKEN_COMMA asset_member

    YYTOKEN_RIGHTBRACE  shift, and go to state 44
    YYTOKEN_COMMA       shift, and go to state 45


State 30

   10 asset_members: asset_member •

    $default  reduce using rule 10 (asset_members)


State 31

   20 scene_object: YYTOKEN_LEFTBRACE • scene_properties YYTOKEN_RIGHTBRACE
   21             | YYTOKEN_LEFTBRACE • YYTOKEN_RIGHTBRACE
   22 scene_properties: • scene_properties YYTOKEN_COMMA YYTOKEN_NODES YYTOKEN_COLON scene_property_nodes
   23                 | • scene_properties YYTOKEN_COMMA YYTOKEN_NAME YYTOKEN_COLON json_string
   24                 | • scene_properties YYTOKEN_COMMA YYTOKEN_EXTRAS YYTOKEN_COLON json_value
   25                 | • YYTOKEN_NODES YYTOKEN_COLON scene_property_nodes
   26                 | • YYTOKEN_NAME YYTOKEN_COLON json_string
   27                 | • YYTOKEN_EXTRAS YYTOKEN_COLON json_value

    YYTOKEN_EXTRAS      shift, and go to state 46
    YYTOKEN_NODES       shift, and go to state 47
    YYTOKEN_NAME        shift, and go to state 48
    YYTOKEN_RIGHTBRACE  shift, and go to state 49

    scene_properties  go to state 50


State 32

   17 scenes_array: YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET •

    $default  reduce using rule 17 (scenes_array)


State 33

   16 scenes_array: YYTOKEN_LEFTBRACKET scene_objects • YYTOKEN_RIGHTBRACKET
   18 scene_objects: scene_objects • YYTOKEN_COMMA scene_object

    YYTOKEN_RIGHTBRACKET  shift, and go to state 51
    YYTOKEN_COMMA         shift, and go to state 52


State 34

   19 scene_objects: scene_object •

    $default  reduce using rule 19 (scene_objects)


State 35

   36 node_object: YYTOKEN_LEFTBRACE • node_properties YYTOKEN_RIGHTBRACE
   37            | YYTOKEN_LEFTBRACE • YYTOKEN_RIGHTBRACE
   38 node_properties: • node_properties YYTOKEN_COMMA YYTOKEN_CAMERA YYTOKEN_COLON YYTOKEN_NUMBER_INT
   39                | • node_properties YYTOKEN_COMMA YYTOKEN_CHILDREN YYTOKEN_COLON node_property_children
   40                | • node_properties YYTOKEN_COMMA YYTOKEN_SKIN YYTOKEN_COLON YYTOKEN_NUMBER_INT
   41                | • node_properties YYTOKEN_COMMA YYTOKEN_MATRIX YYTOKEN_COLON node_property_matrix
   42                | • node_properties YYTOKEN_COMMA YYTOKEN_MESH YYTOKEN_COLON YYTOKEN_NUMBER_INT
   43                | • node_properties YYTOKEN_COMMA YYTOKEN_ROTATION YYTOKEN_COLON node_property_rotation
   44                | • node_properties YYTOKEN_COMMA YYTOKEN_SCALE YYTOKEN_COLON node_property_scale
   45                | • node_properties YYTOKEN_COMMA YYTOKEN_TRANSLATION YYTOKEN_COLON node_property_translation
   46                | • node_properties YYTOKEN_COMMA YYTOKEN_WEIGHTS YYTOKEN_COLON node_property_weights
   47                | • node_properties YYTOKEN_COMMA YYTOKEN_NAME YYTOKEN_COLON json_string
   48                | • YYTOKEN_CAMERA YYTOKEN_COLON YYTOKEN_NUMBER_INT
   49                | • YYTOKEN_CHILDREN YYTOKEN_COLON node_property_children
   50                | • YYTOKEN_SKIN YYTOKEN_COLON YYTOKEN_NUMBER_INT
   51                | • YYTOKEN_MATRIX YYTOKEN_COLON node_property_matrix
   52                | • YYTOKEN_MESH YYTOKEN_COLON YYTOKEN_NUMBER_INT
   53                | • YYTOKEN_ROTATION YYTOKEN_COLON node_property_rotation
   54                | • YYTOKEN_SCALE YYTOKEN_COLON node_property_scale
   55                | • YYTOKEN_TRANSLATION YYTOKEN_COLON node_property_translation
   56                | • YYTOKEN_WEIGHTS YYTOKEN_COLON node_property_weights
   57                | • YYTOKEN_NAME YYTOKEN_COLON json_string

    YYTOKEN_NAME         shift, and go to state 53
    YYTOKEN_CAMERA       shift, and go to state 54
    YYTOKEN_CHILDREN     shift, and go to state 55
    YYTOKEN_SKIN         shift, and go to state 56
    YYTOKEN_MATRIX       shift, and go to state 57
    YYTOKEN_MESH         shift, and go to state 58
    YYTOKEN_ROTATION     shift, and go to state 59
    YYTOKEN_SCALE        shift, and go to state 60
    YYTOKEN_TRANSLATION  shift, and go to state 61
    YYTOKEN_WEIGHTS      shift, and go to state 62
    YYTOKEN_RIGHTBRACE   shift, and go to state 63

    node_properties  go to state 64


State 36

   33 nodes_array: YYTOKEN_LEFTBRACKET YYTOKEN_RIGHTBRACKET •

    $default  reduce using rule 33 (nodes_array)


State 37

   32 nodes_array: YYTOKEN_LEFTBRACKET node_objects • YYTOKEN_RIGHTBRACKET
   34 node_objects: node_objects • YYTOKEN_COMMA node_object

    YYTOKEN_RIGHTBRACKET  shift, and go to state 65
    YYTOKEN_COMMA         shift, and go to state 66


State 38

   35 node_objects: node_object •

    $default  reduce using rule 35 (node_objects)


State 39

   11 asset_member: YYTOKEN_COPYRIGHT YYTOKEN_COLON • json_string
   78 json_string: • YYTOKEN_STRING
   79            | • YYTOKEN_ASSET
   80            | • YYTOKEN_COPYRIGHT
   81            | • YYTOKEN_GENERATOR
   82            | • YYTOKEN_VERSION
   83            | • YYTOKEN_MINVERSION
   84            | • YYTOKEN_EXTENSIONS
   85            | • YYTOKEN_EXTRAS
   86            | • YYTOKEN_SCENES
   87            | • YYTOKEN_NODES
   88            | • YYTOKEN_NAME

    YYTOKEN_ASSET       shift, and go to state 67
    YYTOKEN_COPYRIGHT   shift, and go to state 68
    YYTOKEN_GENERATOR   shift, and go to state 69
    YYTOKEN_VERSION     shift, and go to state 70
    YYTOKEN_MINVERSION  shift, and go to state 71
    YYTOKEN_EXTENSIONS  shift, and go to state 72
    YYTOKEN_EXTRAS      shift, and go to state 73
    YYTOKEN_SCENES      shift, and go to state 74
    YYTOKEN_NODES       shift, and go to state 75
    YYTOKEN_NAME        shift, and go to state 76
    YYTOKEN_STRING      shift, and go to state 77

    json_string  go to state 78


State 40

   12 asset_member: YYTOKEN_GENERATOR YYTOKEN_COLON • json_string
   78 json_string: • YYTOKEN_STRING
   79            | • YYTOKEN_ASSET
   80            | • YYTOKEN_COPYRIGHT
   81            | • YYTOKEN_GENERATOR
   82            | • YYTOKEN_VERSION
   83            | • YYTOKEN_MINVERSION
   84            | • YYTOKEN_EXTENSIONS
   85            | • YYTOKEN_EXTRAS
   86            | • YYTOKEN_SCENES
   87            | • YYTOKEN_NODES
   88            | • YYTOKEN_NAME

    YYTOKEN_ASSET       shift, and go to state 67
    YYTOKEN_COPYRIGHT   shift, and go to state 68
    YYTOKEN_GENERATOR   shift, and go to state 69
    YYTOKEN_VERSION     shift, and go to state 70
    YYTOKEN_MINVERSION  shift, and go to state 71
    YYTOKEN_EXTENSIONS  shift, and go to state 72
    YYTOKEN_EXTRAS      shift, and go to state 73
    YYTOKEN_SCENES      shift, and go to state 74
    YYTOKEN_NODES       shift, and go to state 75
    YYTOKEN_NAME        shift, and go to state 76
    YYTOKEN_STRING      shift, and go to state 77

    json_string  go to state 79


State 41

   13 asset_member: YYTOKEN_VERSION YYTOKEN_COLON • json_string
   78 json_string: • YYTOKEN_STRING
   79            | • YYTOKEN_ASSET
   80            | • YYTOKEN_COPYRIGHT
   81            | • YYTOKEN_GENERATOR
   82            | • YYTOKEN_VERSION
   83            | • YYTOKEN_MINVERSION
   84            | • YYTOKEN_EXTENSIONS
   85            | • YYTOKEN_EXTRAS
   86            | • YYTOKEN_SCENES
   87            | • YYTOKEN_NODES
   88            | • YYTOKEN_NAME

    YYTOKEN_ASSET       shift, and go to state 67
    YYTOKEN_COPYRIGHT   shift, and go to state 68
    YYTOKEN_GENERATOR   shift, and go to state 69
    YYTOKEN_VERSION     shift, and go to state 70
    YYTOKEN_MINVERSION  shift, and go to state 71
    YYTOKEN_EXTENSIONS  shift, and go to state 72
    YYTOKEN_EXTRAS      shift, and go to state 73
    YYTOKEN_SCENES      shift, and go to state 74
    YYTOKEN_NODES       shift, and go to state 75
    YYTOKEN_NAME        shift, and go to state 76
    YYTOKEN_STRING      shift, and go to state 77

    json_string  go to state 80


State 42

   14 asset_member: YYTOKEN_MINVERSION YYTOKEN_COLON • json_string
   78 json_string: • YYTOKEN_STRING
   79            | • YYTOKEN_ASSET
   80            | • YYTOKEN_COPYRIGHT
   81            | • YYTOKEN_GENERATOR
   82            | • YYTOKEN_VERSION
   83            | • YYTOKEN_MINVERSION
   84            | • YYTOKEN_EXTENSIONS
   85            | • YYTOKEN_EXTRAS
   86            | • YYTOKEN_SCENES
   87            | • YYTOKEN_NODES
   88            | • YYTOKEN_NAME

    YYTOKEN_ASSET       shift, and go to state 67
    YYTOKEN_COPYRIGHT   shift, and go to state 68
    YYTOKEN_GENERATOR   shift, and go to state 69
    YYTOKEN_VERSION     shift, and go to state 70
    YYTOKEN_MINVERSION  shift, and go to state 71
    YYTOKEN_EXTENSIONS  shift, and go to state 72
    YYTOKEN_EXTRAS      shift, and go to state 73
    YYTOKEN_SCENES      shift, and go to state 74
    YYTOKEN_NODES       shift, and go to state 75
    YYTOKEN_NAME        shift, and go to state 76
    YYTOKEN_STRING      shift, and go to state 77

    json_string  go to state 81


State 43
